--- a/style.css
+++ b/style.css
@@ -202,15 +202,14 @@ footer > a:hover {
     font-weight: 500;
 }
 
-.employment {
+.employment-skills-box {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     margin-left: 5%;
-    margin-right:  5%;
+    margin-right: 5%;
     margin-bottom: 100px;
     margin-top: 100px;
-    /* background-image: radial-gradient(circle, rgba(231,231,231,1) 0%, rgba(203,203,203,1) 100%); */
     padding: 2%;
-    /* border-radius: 10px; */
-    /* box-shadow: 2px 2px 5px black; */
 }
 
 .employment > h2 {
@@ -240,6 +239,35 @@ footer > a:hover {
     padding-left: 0;
 }
 
+.skills {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skills > ul {
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    align-items: end;
+    text-align: center;
+    width: 350px;
+}
+
+.skills > ul > li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.6rem;
+    border: 5px solid #d0d0d0;
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+}
+
 .projects {
     margin-left: 5%;
     margin-right: 5%;
@@ -253,6 +281,31 @@ footer > a:hover {
     font-weight: 500;
     text-align: left;
     padding-left: 0;
+}
+
+
+.project-card {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    border: 10px solid #d0d0d0;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px black;
+}
+
+.project-card > img {
+    border-radius: 10px 10px 0px 0px;
+    width: 300px
+}
+.project-card > ul {
+    padding: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 hr {
@@ -348,6 +401,10 @@ nav > h2 > span {
     .employment > ul {
         text-align: center;
         width: 100%;
+    }
+
+    .employment-skills-box {
+        grid-template-columns: 1fr;
     }
 
     footer {
